add exceptions and swagger